--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Transitive Bullshit",
-  "short_name": "Transitive BS",
+  "name": "Tiger hole",
+  "short_name": "Tiger BS",
   "icons": [
     {
       "src": "/favicon-16x16.png",
