--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "isomorphic-unfetch": "^3.1.0",
     "lqip-modern": "^1.2.0",
     "next": "^11.1.2",
+    "next-optimized-images": "^2.5.3",
     "node-fetch": "^2.6.1",
     "notion-client": "^4.10.0",
     "notion-types": "^4.10.0",
